Se añade musica

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </div>
   <div class="player-info">
     <div>
-      <label for="player-name">Your Name</label>
+      <label for="player-name">Tu Nombre</label>
       <input id="player-name" maxlength="10" type="text" />
     </div>
     <div>
-      <button id="player-color">Change Color</button>
+      <button id="player-color">Cambia el color</button>
     </div>
   </div>
 
